samples/_failures_safe/1761410259_125ed6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a487cba.c: In function ‘main’:
./samples/SAFE/__tmp_4a487cba.c:162:9: error: expected declaration or statement at end of input
  162 |         }
      |         ^
./samples/SAFE/__tmp_4a487cba.c:162:9: error: expected declaration or statement at end of input
